--- a/questionnaireCheck.html
+++ b/questionnaireCheck.html
@@ -14,7 +14,7 @@
     <script src="./js/function/questionnaireFunction.js" defer></script>
     <script src="./js/getQuestionsDetails.js" defer></script>
     <script src="./js/questionnaireSystem.js" defer></script>
-    <script src="./js/questionnaireCheck.js" defer></script>
+    <script src="./js/questionaireCheck.js" defer></script>
     <title>questionaire</title>
 
 </head>
@@ -46,10 +46,10 @@
                     </div>
                     <div id="QuestionnaireInput">
                         <form action="" method="get">
-                            <p>姓名 <input id="name" type="text" placeholder="請輸入姓名" readonly></p>
-                            <p>手機 <input id="phone" type="text" placeholder="請輸入手機" readonly></p>
-                            <p>Email <input id="email" type="email" placeholder="請輸入email" readonly></p>
-                            <p>年齡 <input id="age" type="text" placeholder="請輸入年齡" readonly></p>
+                            <p>姓名* <input id="name" type="text" placeholder="請輸入姓名" readonly></p>
+                            <p>手機* <input id="phone" type="text" placeholder="請輸入手機" readonly></p>
+                            <p>Email* <input id="email" type="email" placeholder="請輸入email" readonly></p>
+                            <p>年齡* <input id="age" type="text" placeholder="請輸入年齡" readonly></p>
                             <!-- <div class="col">
                                 <div class="row">
                                     <p>性別*</p>
